# FlappyClone

./: CMakeLists.txt  README.md  main.cpp
include/: GameState.h  Player.h  Utility.h  Walls.h
src/: GameState.cpp  Player.cpp  Walls.cpp
